[package]
name = "goose"
version = "0.0.1"
authors = ["Heiko Blobner <heiko.blobner@posteo.de>"]
description = "Developer diary and knowledge container and finder. goos is short for gooseberry."
keywords = ["structured", "hierarchical"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/pfke/goos"
readme = "README.md"
edition = "2018"

[dependencies]
clap = { version = "2", features = ["yaml"] }
rust-embed= { version =  "5" }

slog = { version = "2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2"
slog-stdlog = "4"
slog-term = "2"

